# rusty-keys

./: .gitignore  README.md  klog_beacon.py  klog_c2_server.py
bins/: keylogger
keylogger/: Cargo.toml
keylogger/src/: lib.rs  main.rs
keylogger/src/lib/: mac.rs  mod.rs  nix.rs  win.rs
keylogger/src/os/: mod.rs  nix.rs  win.rs
