[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
tempfile = "3.3.0"
fork = "0.1.19"
enigo = "0.0.14"
clap = { version = "3.1.12", features = ["derive"] }

[target.'cfg(any(windows, macos))'.dependencies]
rdev = "0.5.1"