[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(windows)'.lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
tempfile = "3.3.0"
clap = { version = "3.1.12", features = ["derive"] }

[target.'cfg(any(windows, macos))'.dependencies]
rdev = "0.5.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "minwindef", "winuser"] }